--- a/TASK_ONE_NOTES/docker/2.docker安装和基本操作实践.md
+++ b/TASK_ONE_NOTES/docker/2.docker安装和基本操作实践.md
@@ -69,7 +69,7 @@ $ sudo yum install docker-ce-<VERSION_STRING> docker-ce-cli-<VERSION_STRING> con
 # start docker
 $ systemctl start docker
 
-# or choose a version to install
+# check docker version
 $ docker version
 ```
 
