--- a/TASK_ONE_NOTES/Intellij IDEA/3.IDEA的使用技巧整理.md
+++ b/TASK_ONE_NOTES/Intellij IDEA/3.IDEA的使用技巧整理.md
@@ -4,4 +4,4 @@
 
 ### 1.1在IDEA中使用git进行版本管理的配置
 
- <img src="/TASK_ONE_NOTES/0_resource/IDEA1-1.png" width = "1200" height = "770" alt="图片名称"/>
+![avatar](/TASK_ONE_NOTES/0_resource/IDEA1-1.png)
