--- a/TASK_ONE_NOTES/Intellij IDEA/3.IDEA的使用技巧整理.md
+++ b/TASK_ONE_NOTES/Intellij IDEA/3.IDEA的使用技巧整理.md
@@ -5,3 +5,31 @@
 ### 1.1在IDEA中使用git进行版本管理的配置
 
 ![avatar](/TASK_ONE_NOTES/0_resource/IDEA1-1.png)
+
+### 1.2在IDEA的控制台Terminal配置git bash
+![avatar](/TASK_ONE_NOTES/0_resource/IDEA1-2.png)
+
+### 1.3初始化本地仓库
+
+在Terminal键入如下代码：
+```
+git init
+```
+
+一般的，我们会从clone一个远程repository开始初始化本地仓库，如下：
+- create a repository in github
+
+
+- clone the repository to local PC
+```
+git clone git clone https://github.com/xxx/xxx.git
+```
+- bound the remote repository
+```
+git remote add origin https://github.com/xxx/xxx.git
+```
+- use other command as you like：
+```
+git status|git add .|git commit -m "msg"|git push origin master(:branch)
+```
+
