update code block type

--- a/TASK_ONE_NOTES/Intellij IDEA/2.IDEA的常用快捷键整理.md
+++ b/TASK_ONE_NOTES/Intellij IDEA/2.IDEA的常用快捷键整理.md
@@ -1,7 +1,7 @@
 # IDEA的常用快捷键整理如下[keep updating]
 
 ## 1.代码相关
-```
+```python
 Ctrl + F  # 单文件查找
 Ctrl + R  # 单文件替换
 Ctrl + Shift + F  # 全局查找
@@ -16,7 +16,7 @@ ctrl + alt + t  # 选中，按下ctrl+alt+t，快速快速Surround with
 ```
 
 ## 二、文件操作相关
-```
+```python
 Ctrl + E  # 最近打开
 Ctrl + Tab  # 打开的文件间切换
 ```
