--- a/TASK_ONE_NOTES/Intellij IDEA/3.IDEA的使用技巧整理.md
+++ b/TASK_ONE_NOTES/Intellij IDEA/3.IDEA的使用技巧整理.md
@@ -12,8 +12,8 @@
 ### 1.3初始化本地仓库
 
 在Terminal键入如下代码：
-```
-git init
+```python
+$ git init
 ```
 
 一般的，我们会从clone一个远程repository开始初始化本地仓库，如下：
@@ -21,15 +21,15 @@ git init
 
 
 - clone the repository to local PC
-```
-git clone git clone https://github.com/xxx/xxx.git
+```python
+$ git clone git clone https://github.com/xxx/xxx.git
 ```
 - bound the remote repository
-```
-git remote add origin https://github.com/xxx/xxx.git
+```python
+$ git remote add origin https://github.com/xxx/xxx.git
 ```
 - use other command as you like：
-```
-git status|git add .|git commit -m "msg"|git push origin master(:branch)
+```python
+$ git status|git add .|git commit -m "msg"|git push origin master(:branch)
 ```
 
