--- a/TASK_ONE_NOTES/Intellij IDEA/3.IDEA的使用技巧整理.md
+++ b/TASK_ONE_NOTES/Intellij IDEA/3.IDEA的使用技巧整理.md
@@ -4,10 +4,10 @@
 
 ### 1.1在IDEA中使用git进行版本管理的配置
 
-![avatar](../0_resource/IDEA1-1.png)
+![avatar](../images/IDEA1-1.png)
 
 ### 1.2在IDEA的控制台Terminal配置git bash
-![avatar](../0_resource/IDEA1-2.png)
+![](../images/IDEA1-2.png)
 
 ### 1.3初始化本地仓库
 
