--- a/TASK_ONE_NOTES/docker/2.docker安装和基本操作实践.md
+++ b/TASK_ONE_NOTES/docker/2.docker安装和基本操作实践.md
@@ -7,6 +7,7 @@
 - 安装centOS7
 - 在centOS7上安装docker
 - 实践docker的基本操作
+- *在win10上安装docker
 
 ## 2.安装centOS7
 
@@ -179,4 +180,22 @@ $ docker run -it yp/debian:git /bin/bash  # 从刚提交的镜像实例化容器
 $ docker ps -a  # 再次查看所有运行或运行过的容器
 ```
 
+## 5.在win10上安装docker
 
+> 根据第一次作业的反馈意见，放弃虚拟机内centOS系统上的docker实践，采用直接在宿主机上安装docker，我的win10系统是家庭版而非专业版，不能直接安装docker而需要通过dockerToolBox来安装。
+
+### 5.1 安装工具
+
+DockerToolbox-18.03.0-ce.exe
+
+### 5.2 安装方式
+
+直接运行安装
+
+### 5.3 安装的结果和测试
+
+![](../images/docker_win10_01.png)
+
+![](../images/docker_win10_02.png)
+
+![](../images/docker_win10_03.png)
